[package]
name = "gscan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.5", features = ["derive"] }
crond = "0.1.1"
env_logger = "0.10.0"
http = "0.2.8"
lazy_static = "1.4.0"
log = "0.4.17"
rayon = "1.6.0"
reqwest = { version = "0.11", features = ["blocking"] }


